Fix remove extra margin from title edit field

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -14247,9 +14247,6 @@ a.ueditor-select-option:hover {
 .ueditor-post-page-metadesc .char-counter.over-limit .current {
   color: #e75757; }
 
-.ueditor-post-title-text {
-  margin-bottom: 10px; }
-
 #sidebar-ui .upfront-tax-new_term {
   width: 166px !important;
   height: 22px !important;
